--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -39,16 +39,18 @@
 
                 <Button
                     android:id="@+id/button1"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_weight="1"
-                    android:text="捡箱子" />
+                    android:text="箱子" />
 
                 <Button
                     android:id="@+id/button2"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentTop="true"
@@ -59,6 +61,7 @@
 
                 <Button
                     android:id="@+id/button3"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentTop="true"
