--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -21,100 +21,79 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="110dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:id="@+id/linearLayout">
+                android:orientation="horizontal">
 
-                <Button
+                <ImageButton
                     android:id="@+id/button1"
-                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:layout_margin="@dimen/def_margin_micro"
                     android:layout_weight="1"
-                    android:text="箱子" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="0dp"
+                    android:scaleType="centerCrop"
+                    android:text="箱子"
+                    app:srcCompat="@drawable/ra_box" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/button2"
-                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentTop="true"
+                    android:layout_margin="@dimen/def_margin_micro"
                     android:layout_toEndOf="@+id/button1"
                     android:layout_toRightOf="@+id/button1"
                     android:layout_weight="1"
-                    android:text="爆炸" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="0dp"
+                    android:scaleType="centerCrop"
+                    android:text="爆炸"
+                    app:srcCompat="@drawable/ra_boom" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/button3"
-                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentTop="true"
+                    android:layout_margin="@dimen/def_margin_micro"
                     android:layout_toRightOf="@+id/button2"
                     android:layout_weight="1"
-                    android:text="枪声" />
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:srcCompat="@drawable/ra_gun" />
 
                 <ImageButton
                     android:id="@+id/button4"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:layout_margin="@dimen/def_margin_micro"
                     android:layout_weight="1"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@mipmap/ic_launcher" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_below="@+id/linearLayout"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_star_yellow_500_24dp" />
-
-                <ImageButton
-                    android:id="@+id/imageButton4"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_star_yellow_500_24dp" />
-
-                <ImageButton
-                    android:id="@+id/imageButton3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_star_yellow_500_24dp" />
-
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_star_yellow_500_24dp" />
+                    app:srcCompat="@drawable/ra_allied_base" />
             </LinearLayout>
 
         </RelativeLayout>
