--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="def_margin">10dp</dimen>
     <dimen name="def_margin_small">5dp</dimen>
+    <dimen name="def_margin_micro">2dp</dimen>
     <dimen name="def_padding">10dp</dimen>
     <dimen name="def_padding_small">5dp</dimen>
 
