--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_settings"
             android:title="设置" />
+        <item
+            android:id="@+id/nav_fc"
+            android:title="强行停止" />
     </group>
 
 
@@ -13,4 +17,5 @@
             android:id="@+id/nav_about"
             android:title="关于" />
     </group>
+
 </menu>
