--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -16,8 +16,13 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="循环设置（毫秒）">
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="check_box_enable_loop_play"
+            android:summary="重复循环播放同一项目将无法正常停止"
+            android:title="允许重复循环播放" />
         <EditTextPreference
-            android:defaultValue="500"
+            android:defaultValue="1500"
             android:dialogIcon="@drawable/ic_star_yellow_500_24dp"
             android:inputType="numberDecimal"
             android:key="audio_play_interval"
@@ -29,7 +34,8 @@
             android:defaultValue="false"
             android:key="audio_play_random_interval"
             android:summary="会有玄学效果，固定间隔将被忽略"
-            android:title="启用随机播放" />
+            android:title="启用随机播放"
+            android:visibility="invisible" />
         <EditTextPreference
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
