--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -7,6 +7,9 @@
             android:id="@+id/nav_settings"
             android:title="设置" />
         <item
+            android:id="@+id/nav_reset"
+            android:title="重置SoundPool" />
+        <item
             android:id="@+id/nav_fc"
             android:title="强行停止" />
     </group>
