re-write stop timer method

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_random_guichu"
+        android:id="@+id/menu_random_play"
         android:icon="@drawable/ic_shuffle_yellow_500_24dp"
         android:title="随机鬼畜"
         app:showAsAction="always" />
