--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,10 @@
         <item name="windowNoTitle">true</item>
         <!--<item name="android:windowCloseOnTouchOutside">false</item>--><!-- activity点击空白部分不消失 -->
     </style>
+
+    <style name="Dialog" parent="Theme.AppCompat.Dialog">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
