--- a/app/src/main/res/layout/layout_item_grid.xml
+++ b/app/src/main/res/layout/layout_item_grid.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/def_margin_micro"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="@dimen/def_margin_small"
     android:weightSum="1">
 
     <ImageView
         android:id="@+id/image_noise"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:foreground="?android:attr/selectableItemBackground"
-        android:padding="0dp"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/gc_haa" />
+        app:srcCompat="@drawable/sample" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/transparentDark"
+        android:gravity="center_horizontal"
+        android:text="TextView"
+        android:textColor="@android:color/background_light" />
+
+</RelativeLayout>
