--- a/app/src/main/res/layout-xhdpi/layout_item_grid.xml
+++ b/app/src/main/res/layout-xhdpi/layout_item_grid.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="90dp"
-    android:layout_height="90dp"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_gravity="center"
+    android:background="@drawable/ic_star_yellow_500_24dp"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/def_margin_small"
