--- a/app/src/main/res/layout/layout_item_grid.xml
+++ b/app/src/main/res/layout/layout_item_grid.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="90dp"
-    android:layout_height="90dp"
+    android:layout_width="match_parent"
+    android:layout_height="95dp"
     android:layout_gravity="center"
+    android:layout_margin="@dimen/def_margin_small"
+    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/def_padding_small"
-    android:weightSum="1">
+    app:cardCornerRadius=" "
+    app:cardElevation="8dp">
 
-    <ImageView
-        android:id="@+id/image_noise"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/test" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/transparentDark"
-        android:gravity="center_horizontal"
-        android:text="TextView"
-        android:textColor="@android:color/background_light"
-        android:textSize="10sp" />
+        <ImageView
+            android:id="@+id/image_noise"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/test" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/transparentDark"
+            android:gravity="center_horizontal"
+            android:text="TextView"
+            android:textColor="@android:color/background_light"
+            android:textSize="10sp" />
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
