--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/menu_random_play"
         android:icon="@drawable/ic_shuffle_white_24dp"
-        android:title="随机播放一段时间"
-        app:showAsAction="always" />
+        android:title="随机"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_reset"
         android:icon="@drawable/ic_stop_white_24dp"
@@ -15,5 +15,5 @@
         android:id="@+id/menu_stop_timer"
         android:icon="@drawable/ic_timer_white_24dp"
         android:title="定时停止"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
