--- a/app/src/main/res/layout/layout_item_grid.xml
+++ b/app/src/main/res/layout/layout_item_grid.xml
@@ -8,7 +8,7 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
-    app:cardCornerRadius=" "
+    app:cardCornerRadius="5dp"
     app:cardElevation="8dp">
 
     <RelativeLayout
