--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/def_margin"
-    tools:context="com.canwdev.noise.TimerActivity">
+    tools:context="com.canwdev.noise.SetTimeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:selectAllOnFocus="true"
-            android:hint="时"
+            android:hint="@string/hour"
             android:inputType="numberDecimal" />
 
         <EditText
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="分"
+            android:hint="@string/minute"
             android:inputType="numberDecimal" />
 
         <EditText
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="秒"
+            android:hint="@string/second"
             android:inputType="numberDecimal" />
 
     </LinearLayout>
@@ -52,7 +52,7 @@
         android:layout_weight="0"
         android:checked="true"
         android:gravity="right|center"
-        android:text="自动退出" />
+        android:text="@string/auto_exit" />
 
     <Button
         android:id="@+id/button_ok"
