--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_white_24dp"
-            android:title="设置" />
+            android:title="@string/activity_settings" />
         <item
             android:id="@+id/nav_reset"
             android:icon="@drawable/ic_settings_backup_restore_white_24dp"
-            android:title="重置 SoundPool" />
+            android:title="@string/reset_soundpool" />
         <item
             android:id="@+id/nav_fc"
             android:icon="@drawable/ic_settings_power_white_24dp"
-            android:title="强行停止" />
+            android:title="@string/force_close" />
     </group>
 
 
@@ -21,7 +21,7 @@
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_help_white_24dp"
-            android:title="关于" />
+            android:title="@string/activity_about" />
     </group>
 
 </menu>
