--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/def_margin"
-    tools:context="com.canwdev.noise.SetTimeActivity">
+    tools:mContext="com.canwdev.noise.SetTimeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
