--- a/app/src/main/res/layout/activity_detail_view.xml
+++ b/app/src/main/res/layout/activity_detail_view.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView_finish"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@color/cardview_shadow_end_color" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_share_view"
@@ -22,8 +27,9 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
         android:id="@+id/card_share_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/app_bar_share_view"
+        android:layout_marginBottom="@dimen/def_margin"
         android:layout_marginLeft="@dimen/def_margin"
         android:layout_marginRight="@dimen/def_margin"
         android:layout_marginTop="@dimen/def_margin"
@@ -36,7 +42,7 @@
         <ImageView
             android:id="@+id/imageView_cover"
             android:layout_width="match_parent"
-            android:layout_height="125dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_margin="@dimen/def_margin"
             android:scaleType="fitCenter"
@@ -46,6 +52,7 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/card_share_view"
@@ -54,7 +61,7 @@
         android:layout_marginRight="@dimen/def_margin"
         android:layout_marginTop="@dimen/def_margin"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:visibility="gone">
 
         <Button
             android:id="@+id/button"
