--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#d32f2f</color>
     <color name="colorAccent">#ffeb3b</color>
     <color name="transparentDark">#93000000</color>.
+    <color name="imageShadow">#66000000</color>.
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
