--- a/app/src/main/res/layout/activity_restart.xml
+++ b/app/src/main/res/layout/activity_restart.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -36,6 +35,7 @@
             android:layout_marginBottom="@dimen/def_margin"
             android:layout_marginLeft="@dimen/def_margin"
             android:layout_marginRight="@dimen/def_margin"
+            android:gravity="center"
             android:text="@string/restart_app"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
